Use -Wtraditional for "would be stringified in traditional C" (PR preprocessor/81794)

libcpp/ChangeLog:

2017-03-24  Eric Gallager  <egall@gwmail.gwu.edu>

	PR preprocessor/81794
	* macro.c (check_trad_stringification): Have warning be controlled
	by -Wtraditional.

gcc/testsuite/ChangeLog:

2017-09-17  Eric Gallager  <egall@gwmail.gwu.edu>

	PR preprocessor/81794
	* gcc.dg/pragma-diag-7.c: Update to include check for
	stringification.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@254981 138bc75d-0d04-0410-961f-82ee72b054a4